[gd_scene load_steps=20 format=3 uid="uid://cbnf5yg64ekl1"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Environment" path="res://enviroments/defaultEnviroment.tres" id="2"]
[ext_resource type="Material" path="res://materials/emission.tres" id="3"]
[ext_resource type="Script" path="res://scripts/Interface.gd" id="4"]
[ext_resource type="Script" path="res://scripts/PlatformSpace.gd" id="5"]
[ext_resource type="Script" path="res://scripts/Decorations.gd" id="6"]
[ext_resource type="Script" path="res://scripts/Level.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://dv6d3trcs2jx5" path="res://assets/textures/Arrow.png" id="12"]
[ext_resource type="PackedScene" uid="uid://bhh12kygm4q0h" path="res://scenes/platforms/Start.tscn" id="14"]
[ext_resource type="FontFile" uid="uid://b5y15b7snm3bt" path="res://assets/fonts/montreal/Montreal-Bold.ttf" id="18"]
[ext_resource type="Texture2D" uid="uid://bsipedq2k44on" path="res://assets/textures/Arrow2.png" id="20"]
[ext_resource type="Curve" path="res://curves/scale.tres" id="32"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("18")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="34"]
fallbacks = Array[Font]([ExtResource("18")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="SphereMesh" id="48"]
material = ExtResource("3")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="SphereMesh" id="49"]
material = ExtResource("3")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="SphereMesh" id="50"]
material = ExtResource("3")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="SphereMesh" id="53"]
material = ExtResource("3")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="54"]
max_value = 1.5
_data = [Vector2(0, 1.5), 0.0, -0.0895879, 0, 0, Vector2(0.250737, 1.5), 0.0, -0.128409, 0, 0, Vector2(1, 0), -4.54568, 0.0, 0, 0]
point_count = 3

[node name="Level" type="Node3D"]
script = ExtResource("7")

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="Main" type="NinePatchRect" parent="Interface"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Left" type="NinePatchRect" parent="Interface/Main"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 310.0
offset_top = -630.0
offset_right = 890.0
offset_bottom = -380.0
rotation = 0.628319
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(-500, 0)

[node name="Left" type="TextureButton" parent="Interface/Main/Left"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
texture_normal = ExtResource("12")
texture_pressed = ExtResource("20")
flip_h = true

[node name="Right" type="TextureButton" parent="Interface/Main/Left"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_bottom = 125.0
texture_normal = ExtResource("12")
texture_pressed = ExtResource("20")

[node name="Right" type="NinePatchRect" parent="Interface/Main"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -887.0
offset_top = -626.0
offset_right = -307.0
offset_bottom = -376.0
rotation = -0.628319
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(1080, 0)

[node name="Down" type="TextureButton" parent="Interface/Main/Right"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -133.5
offset_right = 250.0
offset_bottom = 133.5
texture_normal = ExtResource("12")
texture_pressed = ExtResource("20")
flip_h = true

[node name="Up" type="TextureButton" parent="Interface/Main/Right"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -133.5
offset_bottom = 133.5
texture_normal = ExtResource("12")
texture_pressed = ExtResource("20")

[node name="Health" type="Control" parent="Interface/Main"]
clip_contents = true
anchors_preset = 0
anchor_right = 1.0
offset_bottom = 8.0

[node name="Bar" type="ColorRect" parent="Interface/Main/Health"]
clip_contents = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="Interface/Main"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.178
offset_top = -180.0
offset_right = -10.0
offset_bottom = -135.12
theme_override_fonts/font = SubResource("5")
text = "45"

[node name="HighScore" type="Label" parent="Interface/Main"]
layout_mode = 0
anchor_right = 1.0
offset_left = 748.0
offset_top = -64.0
offset_right = -32.0
offset_bottom = -4.0
theme_override_fonts/font = SubResource("34")
text = "HiScore: 120"

[node name="Platforms" type="Node3D" parent="."]
script = ExtResource("5")

[node name="Start" parent="Platforms" instance=ExtResource("14")]

[node name="Player" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2, 0)
script = ExtResource("1")

[node name="Node3D" type="Node3D" parent="Player"]

[node name="Bounce" type="CPUParticles3D" parent="Player/Node3D"]
emitting = false
amount = 20
lifetime = 0.4
explosiveness = 1.0
mesh = SubResource("48")
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
scale_amount_curve = ExtResource("32")

[node name="GameOver" type="CPUParticles3D" parent="Player/Node3D"]
emitting = false
amount = 80
explosiveness = 1.0
mesh = SubResource("49")
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
scale_amount_curve = ExtResource("32")

[node name="BodyP" type="CPUParticles3D" parent="Player/Node3D"]
amount = 24
lifetime = 0.5
fract_delta = false
mesh = SubResource("50")
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 180.0
gravity = Vector3(0, 9.8, 0)
scale_amount_curve = ExtResource("32")

[node name="BodyCenterP" type="CPUParticles3D" parent="Player/Node3D"]
lifetime = 0.5
fract_delta = false
mesh = SubResource("53")
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 180.0
gravity = Vector3(0, 9.8, 0)
scale_amount_curve = SubResource("54")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(0.353553, 0.25, -0.25, 0, 0.353553, 0.353554, 0.353553, -0.25, 0.25, -8, 11, 8)
projection = 1
current = true
fov = 65.0
size = 32.0
near = 0.01
far = 646.3

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2")

[node name="Decorations" type="Node3D" parent="."]
script = ExtResource("6")

[connection signal="button_down" from="Interface/Main/Left/Left" to="Interface" method="_on_left_button_down"]
[connection signal="button_down" from="Interface/Main/Left/Right" to="Interface" method="_on_right_button_down"]
[connection signal="button_down" from="Interface/Main/Right/Down" to="Interface" method="_on_down_button_down"]
[connection signal="button_down" from="Interface/Main/Right/Up" to="Interface" method="_on_up_button_down"]
